# crossextend-kg-main

./: .gitignore  README.md  README_CN.md  REPRODUCIBILITY.md  __init__.py  cli.py  config.py  exceptions.py  file_io.py  io.py  logging_config.py  models.py  pyproject.toml  run_experiment.py  validation.py
backends/: README.md  __init__.py  embeddings.py  faiss_cache.py  llm.py
config/: README.md
crossextend_kg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: README.md  evidence_records_llm.json
docs/: DATA_FLOW_DIAGRAM.md  DATA_FLOW_DIAGRAM_CN.md  DOWNSTREAM_EVALUATION.md  EXECUTION_MEMORY.md  EXPERIMENT_REPORT.md  EXPERIMENT_REPORT_CN.md  EXPERIMENT_RESULTS.md  FIVE_ROUND_OPTIMIZATION_REPORT.md  FIVE_ROUND_OPTIMIZATION_REPORT_CN.md  GRAPH_QUALITY_DIAGNOSIS.md  OPEN_SOURCE_UPDATE_CN.md  PIPELINE_DATA_FLOW.md  PIPELINE_INTEGRATION.md  PROJECT_ARCHITECTURE.md  PROJECT_INTRODUCTION_CN.md  README.md  REAL_RUN_DATA_FLOW_BATTERY_20260417.md  REAL_RUN_DATA_FLOW_BATTERY_20260417_CN.md  ROUND_01.md  ROUND_01_CN.md  ROUND_02.md  ROUND_02_CN.md  ROUND_03.md  ROUND_03_CN.md  ROUND_04.md  ROUND_04_CN.md  ROUND_05.md  ROUND_05_CN.md  ROUND_06.md  SYSTEM_DESIGN.md  WORKFLOW_KG_DESIGN.md
experiments/: README.md  __init__.py  reporting.py  rounds.py
figures/: README.md  current-mainline-execution-flow.md  current-mainline-execution-flow.mmd
pipeline/: __init__.py  artifacts.py  attachment.py  backbone.py  evidence.py  graph.py  memory.py  relation_validation.py  router.py  runner.py  utils.py
preprocessing/: README.md  __init__.py  extractor.py  (+3 more)
(+574 files in other folders)
